# BMSX

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  .hintrc  AGENTS.md  CMakeCache.txt  ECSPipeline.md  ENGINE_PACKAGE_MODE.md  GameDebug.html  LOG.txt  Makefile  README.md  apt-uberget.sh  beunen.md  bmsx.ts  capture.json  cmake_install.cmake  code-quality.config.json  compile_commands.json  consolebase.html  cpp_basenames.txt  cpp_files.txt  cpp_filtered.txt  diff.txt  fix_lint.sh  game.css  game.html  gamebase.css  gamebase.html  gamebase.min.css  gulpfile.js  inspectrom.ps1  inspectrom.sh  package-lock.json  package.json  program-asm-o2.asm  require_compile_refactor.md  rewrite.sh  rooms.yaml  (+22 more)
src/bmsx_cpp/: CMakeLists.txt  README.md  platform.cpp  platform.h  subscription.cpp  subscription.h
src/bmsx_cpp/action_effects/: input_action_effect_compiler.cpp  input_action_effect_compiler.h  input_action_effect_dsl.h
src/bmsx_cpp/audio/: audioeventmanager.cpp  audioeventmanager.h  biquad_filter.cpp  biquad_filter.h  resources.cpp  resources.h  runtime_asset_audio.cpp  runtime_asset_audio.h  soundmaster.cpp  soundmaster.h
src/bmsx_cpp/common/: arrays_equal.h  byte_hex_string.cpp  clamp.h  color.cpp  color.h  endian.h  feature_queue.h  lower_bound.h  mmap_file.h  primitives.cpp  primitives.h  rect.h  registry.cpp  registry.h  scratchbatch.h  scratchbuffer.h  scratchstack.h  subscription.cpp  subscription.h  types.h  utf8.h  vector.cpp  vector.h
src/bmsx_cpp/common/serializer/: binencoder.cpp  binencoder.h
src/bmsx_cpp/component/: actioneffectcomponent.cpp  actioneffectcomponent.h  collisioncomponents.cpp  collisioncomponents.h  component.cpp  component.h  inputactioneffectcomponent.h  inputintentcomponent.h  spritecomponent.cpp  spritecomponent.h  timelinecomponent.cpp  timelinecomponent.h  transformcomponent.cpp  transformcomponent.h
src/bmsx_cpp/core/: assetbarrier.h  assets.cpp  assets.h  binencoder.cpp  binencoder.h  console.cpp  console.h  engine.cpp  engine.h  engine_core.cpp  engine_core.h  font.cpp  font.h  fsm.cpp  fsm.h  host_asset_sync.cpp  host_asset_sync.h  host_frame.cpp  host_frame.h  host_overlay_menu.cpp  host_overlay_menu.h  mmap_file.cpp  mmap_file.h  primitives.cpp  primitives.h  registry.cpp  registry.h  rom_boot_manager.cpp  rom_boot_manager.h  rompack.cpp  rompack.h  system.cpp  system.h  system_machine.cpp  system_machine.h  taskgate.cpp  taskgate.h  textobject.cpp  textobject.h  time.h  (+7 more)
src/bmsx_cpp/ecs/: ecsystem.cpp  ecsystem.h  input_action_effect_system.cpp  input_action_effect_system.h
src/bmsx_cpp/emulator/: api.cpp  api.h  cpu.cpp  cpu.h  cpu_dispatch.inl  cpu_opcode_list.inl  disassembler.cpp  firmware_api.cpp  firmware_api.h  font.cpp  font.h  io.h  lua_globals.cpp  lua_heap_usage.h  lua_load_compiler.cpp  lua_runtime.cpp  memory.cpp  memory.h  memory_map.cpp  memory_map.h  number_format.h  object_memory.cpp  object_memory.h  program_linker.cpp  program_linker.h  program_loader.cpp  program_loader.h  resource_usage_detector.cpp  resource_usage_detector.h  runtime.cpp  runtime.h  runtime_debug.cpp  runtime_frame_loop.cpp  runtime_frame_loop.h  runtime_machine_scheduler.cpp  runtime_machine_scheduler.h  runtime_screen.cpp  runtime_timing.cpp  runtime_timing.h  string_memory.cpp  (+5 more)
src/bmsx_cpp/emulator/devices/: dma_controller.cpp  dma_controller.h  geometry_controller.cpp  geometry_controller.h  imgdec_controller.cpp  imgdec_controller.h  input_controller.cpp  (+1 more)
src/bmsx_cpp/fsm/: fsm.h  fsmcontroller.cpp  fsmcontroller.h  fsmlibrary.cpp  fsmlibrary.h  fsmtypes.h  state.cpp  state.h  statedefinition.cpp  statedefinition.h
src/bmsx_cpp/input/: action_parser.cpp  action_parser.h  actionparser.cpp  actionparser.h  context.h  gamepad.cpp  gamepad.h  gamepadinput.cpp  gamepadinput.h  input.cpp  input.h  inputstatemanager.cpp  inputstatemanager.h  inputtypes.h  keyboard.cpp  keyboard.h  keyboardinput.cpp  keyboardinput.h  manager.cpp  manager.h  models.h  player.cpp  player.h  playerinput.cpp  playerinput.h  pointer.cpp  pointer.h  pointerinput.cpp  pointerinput.h  state_manager.cpp  state_manager.h
src/bmsx_cpp/machine/: machine.cpp  machine.h  machine_specs.cpp  save_state.cpp  save_state.h  specs.cpp  specs.h
src/bmsx_cpp/platform/: platform.cpp  platform.h
src/bmsx_cpp/render/: backend.cpp  backend.h  crt_pipeline_gles2.cpp  crt_pipeline_gles2.h  frame_uniforms.cpp  frame_uniforms.h  gameview.cpp  gameview.h  gles2_backend.cpp  gles2_backend.h  glyphs.cpp  glyphs.h  presentation_state.cpp  presentation_state.h  render_queues.cpp  render_queues.h  render_types.h  rendergraph.cpp  rendergraph.h  renderpass_builder.h  renderpasslib.cpp  renderpasslib.h  runtime_asset_textures.cpp  runtime_asset_textures.h  runtime_state.cpp  runtime_state.h  sprites_pipeline.cpp  sprites_pipeline.h  sprites_pipeline_gles2.cpp  sprites_pipeline_gles2.h  test_pattern.cpp  test_pattern.h  texture_load_barrier.h  texture_manager.cpp  texture_manager.h  texturemanager.cpp  texturemanager.h
src/bmsx_cpp/rompack/: assets.cpp  assets.h  format.cpp  format.h  host_system_atlas.cpp  host_system_atlas.generated.cpp  host_system_atlas.h  host_system_atlas_generated.cpp  host_system_atlas_generated.h  loader.cpp  loader.h  metadata.cpp  metadata.h  package.cpp  rompack.cpp  rompack.h  runtime_assets.cpp  runtime_assets.h  source.cpp  source.h  toc.cpp  toc.h  tokens.cpp  tokens.h
src/bmsx_cpp/serializer/: binencoder.cpp  binencoder.h
src/bmsx_cpp/tests/: core_golden_test.cpp  vdp_ingress_test.cpp
src/bmsx_cpp/timeline/: timeline.cpp  timeline.h
src/bmsx_cpp/utils/: byte_hex_string.h  clamp.h  feature_queue.h  mem_snapshot.cpp  mem_snapshot.h  scratchbatch.h  scratchbuffer.cpp
src/bmsx_cpp/vm/: cpu.cpp  cpu.h  font.cpp  font.h  memory_map.cpp  memory_map.h  number_format.h  program_linker.cpp  program_linker.h  program_loader.cpp  program_loader.h  string_memory.cpp  string_memory.h  vdp.cpp  vdp.h  vm_api.cpp  vm_api.h  vm_io.h  vm_memory.cpp  vm_memory.h  vm_objects.cpp  vm_objects.h  vm_runtime.cpp  vm_runtime.h  vm_systems.cpp  vm_systems.h
(+4089 files in other folders)
